--- a/templates/admin.html
+++ b/templates/admin.html
@@ -16,8 +16,13 @@
 				<td>Admin:</td>
 				<td><input type="checkbox" name="admin" id="admin"></td>
 			</tr>
+			<tr>
+				<td></td>
+				<td>
+					<button id="create_user" class="btn btn-default">Lag bruker</button>
+				</td>
+			</tr>
 		</table>
-		<button id="create_user">Lag bruker</button>
 
 {% endblock %}
 
