--- a/templates/admin.html
+++ b/templates/admin.html
@@ -37,7 +37,7 @@
 				{% for user in users %}
 					<tr>
 						<td>{{ user.username }}</td>
-						<td>{{ user.admin }}</td>
+						<td>{{ "Ja" if user.admin else "Nei" }}</td>
 						<td>
 							<button class="btn btn-danger btn-xs del-btn">Slett</button>
 						</td>
@@ -66,7 +66,7 @@
 				success: function(result) {
 					if (result === "true"){
 						show_message("Brukeren " + $("#username").val() + " ble laget.");
-						$("#user-body").append("<tr><td>" + data.username + "</td><td>" + data.admin + "</td><td><button class='btn btn-danger btn-xs del-btn'>Slett</button></td></tr>");
+						$("#user-body").append("<tr><td>" + data.username + "</td><td>" + (data.admin ?"Ja": "Nei") + "</td><td><button class='btn btn-danger btn-xs del-btn'>Slett</button></td></tr>");
 					}
 					else
 						show_message("Brukeren " + $("#username").val() + " ble ikke laget.");
