--- a/templates/home.html
+++ b/templates/home.html
@@ -28,7 +28,7 @@
 								<input class="btn btn-info btn-xs" type="submit" value="Vis">
 							</form>
 						</li>
-						{% if session.admin %}
+						{% if session.local_admin %}
 						<li>
 							<button class="btn btn-danger btn-xs del-btn" value="{{ url_for('delete_beer', beer_name=beer.name, beer_type=beer.type) }}">Slett</button>
 							<!-- <form action="{{ url_for('delete_beer', beer_name=beer.name, beer_type=beer.type) }}" method="POST">
