--- a/templates/base.html
+++ b/templates/base.html
@@ -33,6 +33,7 @@
 	    		<ul class="nav navbar-nav navbar-left">
 	        		<li><a href="{{ url_for('home') }}">Hjem</a></li>
             		<li><a href="{{ url_for('add_new_beer') }}">Nytt øl</a></li>
+                    <li><a href="{{ url_for('get_groups') }}">Grupper</a></li>
             		{% if session.local_admin %}
             			<li class="dropdown">
             				<a href="#" data-toggle="dropdown" class="dropdown-toggle">Admin
