--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,16 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+    <style type="text/css">
+    .group-row {
+        cursor: pointer;
+    }
+
+    .group-row:hover {
+        background-color: #ebebe0;
+    }
+    </style>
   </head>
   <body>
 
@@ -33,7 +43,40 @@
 	    		<ul class="nav navbar-nav navbar-left">
 	        		<li><a href="{{ url_for('home') }}">Hjem</a></li>
             		<li><a href="{{ url_for('add_new_beer') }}">Nytt øl</a></li>
-                    <li><a href="{{ url_for('get_groups') }}">Grupper</a></li>
+                    <!-- <li><a href="{{ url_for('get_groups') }}">Grupper</a></li> -->
+                    <li>
+                        <a href="#" data-toggle="dropdown" class="dropdown-toggle">
+                            Grupper
+                            <b class="caret"></b>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="{{ url_for('get_groups') }}">Håndtering</a></li>
+                            <li class="divider"></li>
+                            <li class="dropdown-header">Dine grupper</li>
+                            <li class="divider"></li>
+                            {% for group in session.your_groups %}
+                                <li><a href="{{ url_for('show_group', group_name=group.name, owner=session.username) }}">{{ group.name }}</a></li>
+                            {% endfor %}
+                            {% if session.other_groups %}
+                                <li class="divider"></li>
+                                <li class="dropdown-header">Grupper du er medlem av</li>
+                                <li>
+                                    <table class="table">
+                                        <tr>
+                                            <th>Navn</th>
+                                            <th>Eier</th>
+                                        </tr>
+                                        {% for group in session.other_groups %}
+                                        <tr class='group-row' data-href="{{ url_for('show_group', group_name=group.name, owner=group.owner) }}">
+                                            <td>{{group.name}}</td>
+                                            <td>{{group.owner}}</td>
+                                        </tr>
+                                        {% endfor %}
+                                    </table>
+                                </li>
+                            {% endif %}
+                        </ul>
+                    </li>
             		{% if session.local_admin %}
             			<li class="dropdown">
             				<a href="#" data-toggle="dropdown" class="dropdown-toggle">Admin
@@ -94,6 +137,13 @@
                 setTimeout(function(){$("#message").fadeOut(1000)}, 3000);
             });
         }
+
+        jQuery(document).ready(function($) {
+            $(".group-row").click(function() {
+                console.log("Heisanndu.")
+                window.document.location = $(this).data("href");
+            });
+        });
 
     </script>
 
