Started to change independent groups

--- a/templates/base.html
+++ b/templates/base.html
@@ -61,7 +61,7 @@
                                 <li class="divider"></li>
                                 <li class="dropdown-header">Grupper du er medlem av</li>
                                 <li>
-                                    <table class="table">
+                                    <table class="table dropdown-header">
                                         <tr>
                                             <th>Navn</th>
                                             <th>Eier</th>
