--- a/templates/group_page.html
+++ b/templates/group_page.html
@@ -15,6 +15,18 @@
 			<td><input type="text" id="username"></td>
 		</tr>
 		<tr>
+			<td>Kan slette elementer:</td>
+			<td><input type="checkbox"></td>
+		</tr>
+		<tr>
+			<td>Kan legge til typer:</td>
+			<td><input type="checkbox"></td>
+		</tr>
+		<tr>
+			<td>Kan gi poeng:</td>
+			<td><input type="checkbox"></td>
+		</tr>
+		<tr>
 			<td></td>
 			<td><button id="add-user" class="btn btn-default">Legg til</button></td>
 		</tr>
