--- a/templates/groups.html
+++ b/templates/groups.html
@@ -34,7 +34,7 @@
 						<ui class="list-inline">
 							<li>
 								<form action="{{ url_for('show_group', group_name=group.name, owner=session.username) }}">
-									<input type="submit" class="btn btn-default btn-xs" value="Vis">
+									<input type="submit" class="btn btn-default btn-xs" value="Administrer">
 								</form>
 							</li>
 							<li><button class="btn btn-danger btn-xs del-btn">Slett</button></li>
