--- a/templates/group_page.html
+++ b/templates/group_page.html
@@ -66,7 +66,7 @@
 				type: "POST",
 				contentType: 'application/json;charset=UTF-8',
 				url: "{{ url_for('add_user_to_group') }}",
-				data: JSON.stringify({user: username, group: group_name}),
+				data: JSON.stringify({user: username, group: group_name, can_delete: false, types: false, add_points: true}),
 				success: function(res) {
 					if (res["success"]){
 						show_message("Brukeren " + username + " ble lagt til gruppen.");
