--- a/templates/base.html
+++ b/templates/base.html
@@ -42,7 +42,6 @@
 	  		<div class="navbar-collapse collapse">
 	    		<ul class="nav navbar-nav navbar-left">
 	        		<li><a href="{{ url_for('home') }}">Hjem</a></li>
-            		<li><a href="{{ url_for('add_new_beer') }}">Nytt øl</a></li>
                     <!-- <li><a href="{{ url_for('get_groups') }}">Grupper</a></li> -->
                     <li>
                         <a href="#" data-toggle="dropdown" class="dropdown-toggle">
@@ -151,4 +150,13 @@
 
     {% endblock %}
   </body>
+
+  {% if error %}
+    <script type="text/javascript">
+
+        show_message("{{ error }}");
+
+    </script>
+  {% endif %}
+
 </html>
